release: v1.6.1 - Grups, jugadors anònims, filtre d'avaluació per grup i amagar menús secundaris
